@@ -41,6 +41,7 @@ redis.prime_style = 1
 nginx.servers_pool = http://127.0.0.1
 nginx.userpass = peter:sslers
 nginx.servers_pool_allow_invalid = True
+nginx.timeout = 1
 
 admin_server = http://127.0.0.1:7201
 # show on instructions
